force-app/main/default/objects/Crisis_Case__c/Crisis_Case__c.object-meta.xml
<CustomObject>
    <label>Crisis Case</label>
    <nameField>
        <label>Crisis Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crisis Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>