force-app/main/default/objects/Crisis_Case__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>crisisapp__Location__c</referenceTo>
    <relationshipLabel>Crisis Cases</relationshipLabel>
    <relationshipName>Crisis_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>