force-app/main/default/objects/Crisis_Case__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cyclone</fullName>
            </value>
            <value>
                <fullName>Earthquake</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Landslide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>